code cleanup: remove List.of application